added third line

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <body>
         <p>It was a dark and stormy night...</p>
-		<p>Not much happened beyond that.</p>
+        <p>Not much happened beyond that.</p>
+        <p>Except that something did happen beyond that:</p>
     </body>
 </html>
