At long last, the fifth line of the story

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <p>It was a dark and stormy night...</p>
         <p>Not much happened beyond that.</p>
         <p>Except that something did happen beyond that:</p>
-		<p>It was at my uncle Jim's house. My mom always told me not to go there when he was gone...</p>
+        <p>It was at my uncle Jim's house. My mom always told me not to go there when he was gone...</p>
+        <p>I knew of his past, and knew he had his stash of gold from the train robbery hidden there.</p>
     </body>
 </html>
